--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -37,7 +37,7 @@
     </div>
     <div class="modal-footer d-flex justify-content-between">
         <div>
-            <button class="btn btn-danger" hx-post hx-page-handler="RemoveStudyTask" hx-route-id="@Model.StudyTaskUpdate.Id" data-bs-dismiss="modal">Delete</button>
+            <button class="btn btn-danger" hx-post hx-page-handler="ArchiveStudyTask" hx-route-id="@Model.StudyTaskUpdate.Id" data-bs-dismiss="modal">Archive</button>
         </div>
         <div>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
