--- a/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.css
+++ b/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.css
@@ -11875,8 +11875,8 @@ a:hover {
   color: #20c997;
 }
 
-:root {
-  --bs-body-color: #c3cdd6;
-}
+/*:root {
+    --bs-body-color: #c3cdd6;
+}*/
 
 /*# sourceMappingURL=custom.css.map */
