--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -6,6 +6,14 @@
 
 @model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
 
+@if (Model.RenderTasksOutOfBand)
+{
+    <div id="task-history" hx-swap-oob="true">
+        @await Html.PartialAsync("Partials/_TaskHistory")
+    </div>
+}
+
+
 <div id="all-study-tasks" class="row gx-5">
     <div class="col-6">
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
