--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -8,7 +8,22 @@
     hx-page-handler="CreateStudyTask"
     hx-swap="innerHTML"
     hx-target="#current-tasks"
-    hx-on::after-request=" if(event.detail.successful) this.reset()">
+    hx-on::after-request="if(event.detail.successful) { this.reset(); }"
+    x-on:htmx:after-request-window="console.log('HELLO')"
+    x-data="{
+        selectedLabels: [],
+        toggleLabel(id) {
+            if (this.selectedLabels.includes(id)) {
+                this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
+            } else {
+                this.selectedLabels.push(id);
+            }
+        },
+        clearSelectedLabels() {
+            this.selectedLabels = [];
+        }
+    }"
+    x-on:clear-labels.window="clearSelectedLabels()">
     <div class="modal-body">
         <div class="mb-2">
             <label asp-for="StudyTaskCreate.Name" class="form-label">Task:</label>
@@ -26,22 +41,13 @@
             }
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
-        <div class="mb-2" x-data="{
-                selectedLabels: [] ,
-                toggleLabel(id) {
-                    if (this.selectedLabels.includes(id)) {
-                        this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
-                    } else {
-                        this.selectedLabels.push(id);
-                    }
-                }
-            }">
-            <div class="d-flex justify-content-between">
+        <div class="mb-2">
+            <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                     <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
                     <div class="dropdown">
                         <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Add <i class="bi bi-plus"></i>
+                            Choose <i class="bi bi-chevron-expand"></i>
                         </a>
                         <ul class="dropdown-menu">
                             @foreach (var label in Model.TaskLabels)
@@ -63,9 +69,9 @@
                 </div>
                 <div>
                     @*Create new label*@
-                    <a href="#" class="text-secondary text-opacity-75" data-bs-toggle="modal" data-bs-target="#label-create-modal">
-                        Create New <i class="bi bi-plus"></i></a>
-                    <button type="button" class="btn btn-sm btn-outline-secondary" x-on:click="selectedLabels=[]">Clear</button>
+                    <span class="text-secondary text-opacity-75">
+                        Create New <i class="bi bi-plus"></i>
+                    </span>
                 </div>
             </div>
 
@@ -87,7 +93,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button x-on:click.prevent.stop="submitCreateStudyTaskForm()" type="submit" id="submitButton" class="btn btn-primary">Add</button>
+        <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
     </div>
     @Html.AntiForgeryToken()
 </form>
