Now able to add and remove labels from tasks in edit dialog.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyPomo</title>
+    <title>studypomo.</title>
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-5 py-3">
                 <div class="container">
                     <a class="navbar-brand text-primary" asp-area="" asp-page="/Index">
-                        <h4>Study Pomo</h4>
+                        <h4 class="mb-1">studypomo.</h4>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
