--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Index.cshtml
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div>
-                <a class="text-secondary" data-bs-toggle="modal" data-bs-target="#study-task-history"><i class="bi bi-clock-history me-1"></i> History</a>
+                <a href="#" class="text-secondary" data-bs-toggle="modal" data-bs-target="#study-task-history"><i class="bi bi-clock-history me-1"></i> History</a>
             </div>
         </div>
 
