--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -11,7 +11,20 @@
     hx-page-handler="UpdateStudyTask"
     hx-swap="outerHTML"
     hx-target="#all-study-tasks"
-    hx-on::after-request=" if(event.detail.successful) this.reset()">
+    hx-on::after-request=" if(event.detail.successful) this.reset()"
+    x-data="{
+        selectedLabels: @Json.Serialize(Model.StudyTaskUpdate.TaskLabelIds),
+        toggleLabel(id) {
+            if (this.selectedLabels.includes(id)) {
+                this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
+            } else {
+                this.selectedLabels.push(id);
+            }
+        },
+        clearSelectedLabels() {
+            this.selectedLabels = [];
+        }
+    }">
     <div class="modal-body">
         <input hidden asp-for="StudyTaskUpdate.Id" />
         <div class="mb-2">
@@ -32,7 +45,56 @@
                     <label class="form-check-label" for="@(priority.Id)-edit">@priority.Level</label>
                 </div>
             }
-            <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
+            <span asp-validation-for="StudyTaskUpdate.TaskPriorityId" class="text-danger form-text"></span>
+        </div>
+        <div class="mb-2">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
+                    <label asp-for="StudyTaskUpdate.Name" class="form-label me-2 my-0">Labels:</label>
+                    <div class="dropdown">
+                        <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Choose <i class="bi bi-chevron-expand"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            @foreach (var label in Model.TaskLabels)
+                            {
+                                <li>
+                                    <a class="dropdown-item" href="#"
+                                       x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <span class="badge" style="background-color: @(label.HexColor)">@label.Name</span>
+                                            <i class="bi"
+                                               :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''">
+                                            </i>
+                                        </div>
+                                    </a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    @*Create new label*@
+                    <span class="text-secondary text-opacity-75">
+                        Create New <i class="bi bi-plus"></i>
+                    </span>
+                </div>
+            </div>
+
+            <div class="mt-2">
+                <template x-for="labelId in selectedLabels" :key="labelId">
+                    <div>
+                        @foreach (var label in Model.TaskLabels)
+                        {
+                            <template x-if="labelId === @label.Id">
+                                <span class="badge me-1" style="background-color: @label.HexColor">@label.Name</span>
+                            </template>
+                        }
+                        @*For model binding.*@
+                        <input type="hidden" name="StudyTaskUpdate.TaskLabelIds" :value="labelId">
+                    </div>
+                </template>
+            </div>
         </div>
     </div>
     <div class="modal-footer d-flex justify-content-between">
