Completed Label CRUD. Added include params to GeneralRepository.

--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -68,9 +68,9 @@
                 </div>
                 <div>
                     @*Create new label*@
-                    <span class="text-secondary text-opacity-75">
+                    <a asp-page="../Labels/Index" class="text-secondary text-opacity-75">
                         Create New <i class="bi bi-plus"></i>
-                    </span>
+                    </a>
                 </div>
             </div>
 
