--- a/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Areas/Registered/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -15,7 +15,7 @@
 
 
 <div id="all-study-tasks" class="row gx-5">
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
             <div class="d-flex h-100 align-items-end">
                 <h5 class="mb-0 me-4">Tasks</h5>
@@ -31,7 +31,7 @@
         </div>
 
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
             <h5 class="mb-0 me-2">Completed Tasks</h5>
         </div>
