Modified file structure by moving pages out of Registered area and into root directory. Modified login & register page styles.

--- a/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using PomodoroLibrary.Models.Tables.LabelEntities
-@model PomodoroUI.Areas.Registered.Pages.Labels.IndexModel
+@model PomodoroUI.Pages.Labels.IndexModel
 @{
 }
 
@@ -55,7 +55,7 @@
                                     <div class="mb-3">
                                         <label asp-for="TaskLabelUpdate.Description" class="form-label">Description</label>
                                         <input type="text" class="form-control form-control-sm" asp-for="TaskLabelUpdate.Description" value="@Model.TaskLabels[i].Description" />
-                                        <small class="text-body-secondary">Optionally write a short description for this label.</small>
+                                        <small class="text-body-secondary">Write a short description for this label. (optional)</small>
                                         <span asp-validation-for="TaskLabelUpdate.Description" class="text-danger form-text"></span>
                                     </div>
                                     <div class="mb-2">
@@ -123,7 +123,7 @@
                     <div class="mb-3">
                         <label asp-for="TaskLabelCreate.Description" class="form-label">Description</label>
                         <input type="text" class="form-control form-control-sm" asp-for="TaskLabelCreate.Description" />
-                        <small class="text-body-secondary">Optionally write a short description for this label.</small>
+                        <small class="text-body-secondary">Write a short description for this label. (optional)</small>
                         <span asp-validation-for="TaskLabelCreate.Description" class="text-danger form-text"></span>
                     </div>
                     <div class="mb-2">
@@ -150,5 +150,5 @@
 
     <partial name="_ValidationScriptsPartial" />
 
-    <script src="~/Areas/Registered/Pages/Labels/Index.cshtml.js" asp-append-version="true"></script>
+    <script src="~/Pages/Labels/Index.cshtml.js" asp-append-version="true"></script>
  }
