--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 
-@model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
+@model PomodoroUI.Pages.Timer.IndexModel
 
 @if (Model.RenderTasksOutOfBand)
 {
