--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_TaskHistory.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_TaskHistory.cshtml
@@ -5,7 +5,7 @@
 @{
 }
 
-@model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
+@model PomodoroUI.Pages.Timer.IndexModel
 
 <div class="modal fade" id="study-task-history" tabindex="-1" aria-labelledby="taskModalHistoryLabel" aria-hidden="true">
     <div class="modal-dialog">
