--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Humanizer
 
-@model PomodoroUI.Areas.Registered.Pages.Timer.IndexModel
+@model PomodoroUI.Pages.Timer.IndexModel
 
 @{
     var uncompletedTasks = Model.StudyTasks.Where(u => !u.Completed && !u.Archived).ToList();
