--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyPomo</title>
+    <title>studypomo.</title>
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
@@ -12,10 +12,10 @@
 <body style="height: 100vh">
     <div class="d-flex flex-column h-100">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
                 <div class="container">
-                    <a class="navbar-brand text-primary" asp-area="" asp-page="/Index">
-                        <i class="bi bi-brilliance" style="font-size: 40px"></i>
+                    <a class="navbar-brand text-primary" asp-page="/Timer/Index">
+                        <h4 class="mb-1">studypomo.</h4>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -39,6 +39,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/bootstrap-5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
