--- a/PomodoroUI/PomodoroUI/Pages/_ViewImports.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PomodoroUI
 @namespace PomodoroUI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Htmx.TagHelpers
