Added feature to switch between light and dark themes. Modified scss styles.

--- a/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.css
+++ b/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.css
@@ -31,7 +31,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #19a87e;
-  --bs-secondary: #c3cdd6;
+  --bs-secondary: #6c757d;
   --bs-success: #20c997;
   --bs-info: #c3e3d3;
   --bs-warning: #ffc107;
@@ -39,7 +39,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 25, 168, 126;
-  --bs-secondary-rgb: 195, 205, 214;
+  --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 32, 201, 151;
   --bs-info-rgb: 195, 227, 211;
   --bs-warning-rgb: 255, 193, 7;
@@ -47,7 +47,7 @@
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #0a4332;
-  --bs-secondary-text-emphasis: #4e5256;
+  --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0d503c;
   --bs-info-text-emphasis: #4e5b54;
   --bs-warning-text-emphasis: #664d03;
@@ -55,7 +55,7 @@
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #d1eee5;
-  --bs-secondary-bg-subtle: #f3f5f7;
+  --bs-secondary-bg-subtle: #e2e3e5;
   --bs-success-bg-subtle: #d2f4ea;
   --bs-info-bg-subtle: #f3f9f6;
   --bs-warning-bg-subtle: #fff3cd;
@@ -63,7 +63,7 @@
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #a3dccb;
-  --bs-secondary-border-subtle: #e7ebef;
+  --bs-secondary-border-subtle: #c4c8cb;
   --bs-success-border-subtle: #a6e9d5;
   --bs-info-border-subtle: #e7f4ed;
   --bs-warning-border-subtle: #ffe69c;
@@ -143,7 +143,7 @@
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #75cbb2;
-  --bs-secondary-text-emphasis: #dbe1e6;
+  --bs-secondary-text-emphasis: #a7acb1;
   --bs-success-text-emphasis: #79dfc1;
   --bs-info-text-emphasis: #dbeee5;
   --bs-warning-text-emphasis: #ffda6a;
@@ -151,7 +151,7 @@
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #052219;
-  --bs-secondary-bg-subtle: #27292b;
+  --bs-secondary-bg-subtle: #161719;
   --bs-success-bg-subtle: #06281e;
   --bs-info-bg-subtle: #272d2a;
   --bs-warning-bg-subtle: #332701;
@@ -159,7 +159,7 @@
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #0f654c;
-  --bs-secondary-border-subtle: #757b80;
+  --bs-secondary-border-subtle: #41464b;
   --bs-success-border-subtle: #13795b;
   --bs-info-border-subtle: #75887f;
   --bs-warning-border-subtle: #997404;
@@ -1945,13 +1945,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #f3f5f7;
-  --bs-table-border-color: #c2c4c6;
-  --bs-table-striped-bg: #e7e9eb;
+  --bs-table-bg: #e2e3e5;
+  --bs-table-border-color: #b5b6b7;
+  --bs-table-striped-bg: #d7d8da;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dbddde;
+  --bs-table-active-bg: #cbccce;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e1e3e4;
+  --bs-table-hover-bg: #d1d2d4;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2981,20 +2981,20 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #c3cdd6;
-  --bs-btn-border-color: #c3cdd6;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ccd5dc;
-  --bs-btn-hover-border-color: #c9d2da;
-  --bs-btn-focus-shadow-rgb: 166, 174, 182;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #cfd7de;
-  --bs-btn-active-border-color: #c9d2da;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #6c757d;
+  --bs-btn-border-color: #6c757d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #5c636a;
+  --bs-btn-hover-border-color: #565e64;
+  --bs-btn-focus-shadow-rgb: 130, 138, 145;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #565e64;
+  --bs-btn-active-border-color: #51585e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #c3cdd6;
-  --bs-btn-disabled-border-color: #c3cdd6;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #6c757d;
+  --bs-btn-disabled-border-color: #6c757d;
 }
 
 .btn-success {
@@ -3117,19 +3117,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #c3cdd6;
-  --bs-btn-border-color: #c3cdd6;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #c3cdd6;
-  --bs-btn-hover-border-color: #c3cdd6;
-  --bs-btn-focus-shadow-rgb: 195, 205, 214;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #c3cdd6;
-  --bs-btn-active-border-color: #c3cdd6;
+  --bs-btn-color: #6c757d;
+  --bs-btn-border-color: #6c757d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6c757d;
+  --bs-btn-hover-border-color: #6c757d;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6c757d;
+  --bs-btn-active-border-color: #6c757d;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #c3cdd6;
+  --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #c3cdd6;
+  --bs-btn-disabled-border-color: #6c757d;
   --bs-gradient: none;
 }
 
@@ -6758,7 +6758,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-secondary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-secondary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6806,8 +6806,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: RGBA(207, 215, 222, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(207, 215, 222, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(86, 94, 100, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(86, 94, 100, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-success {
@@ -11850,31 +11850,22 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.nav-link {
-  color: #19a87e;
-  font-weight: 600;
+/*.nav-link {
+    color: $primary;
+    font-weight: 600;
 }
-
 .nav-link:hover {
-  color: #20c997;
+    color: $success;
 }
-
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-  color: #c3cdd6;
+h1, h2, h3, h4, h5, h6 {
+    color: $secondary;
 }
-
-p {
-  color: #a9bab4;
-}
-
 a {
-  color: #19a87e;
+    color: $primary;
 }
-
 a:hover {
-  color: #20c997;
-}
-
+    color: $success;
+}*/
 /*:root {
     --bs-body-color: #c3cdd6;
 }*/
