--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" x-data="{
+    theme: localStorage.getItem('theme') || 'dark',
+    setTheme(newTheme) {
+        this.theme = newTheme;
+        localStorage.setItem('theme', newTheme);
+    }
+}" x-init="$watch('theme', value => localStorage.setItem('theme', value))" :data-bs-theme="theme">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,8 +20,8 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
                 <div class="container">
-                    <a class="navbar-brand text-primary" asp-page="/Timer/Index">
-                        <h4 class="mb-1">studypomo.</h4>
+                    <a x-bind:class="theme == 'dark' ? 'navbar-brand text-light' : 'navbar-brand text-dark'" asp-page="/Timer/Index">
+                        <h4>studypomo.</h4>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +30,18 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                         </ul>
+
+                        <div class="dropdown">
+                            <i x-bind:class="theme == 'dark' ? 'bi bi-sun' : 'bi bi-moon-stars-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                            <ul class="dropdown-menu" aria-labelledby="themeDropdown">
+                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('light')">Light</a></li>
+                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('dark')">Dark</a></li>
+                            </ul>
+                        </div>
+                        <div class="mt-1 h-100 mx-3">
+                            <div class="vr h-100"></div>
+                        </div>
+
                         <partial name="_LoginPartial" />
                     </div>
                 </div>
