--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -45,7 +45,7 @@
                 <div class="d-flex align-items-center">
                     <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
                     <div class="dropdown">
-                        <a class="text-secondary text-opacity-75" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="text-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Choose <i class="bi bi-chevron-expand"></i>
                         </a>
                         <ul class="dropdown-menu">
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     @*Create new label*@
-                    <a asp-page="../Labels/Index" class="text-secondary text-opacity-75">
+                    <a asp-page="../Labels/Index" class="text-opacity-75">
                         Create New <i class="bi bi-plus"></i>
                     </a>
                 </div>
