Removed unused areas and css overrides in layout page. Added icons to theme dropdown.

--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -34,8 +34,8 @@
                         <div class="dropdown">
                             <i x-bind:class="theme == 'dark' ? 'bi bi-sun' : 'bi bi-moon-stars-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
                             <ul class="dropdown-menu" aria-labelledby="themeDropdown">
-                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('light')">Light</a></li>
-                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('dark')">Dark</a></li>
+                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('light')"><i class="bi bi-sun"></i> Light</a></li>
+                                <li><a class="dropdown-item" href="#" x-on:click="setTheme('dark')"><i class="bi bi-moon-stars-fill"></i> Dark</a></li>
                             </ul>
                         </div>
                         <div class="mt-1 h-100 mx-3">
