--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -10,12 +10,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>studypomo.</title>
+    <style>
+        /* Hide content until Alpine.js applies the theme */
+        body {
+            visibility: hidden;
+        }
+    </style>
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body style="height: 100vh">
+<body x-init="document.body.style.visibility = 'visible';" style="height: 100vh">
     <div class="d-flex flex-column h-100">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
