--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body x-init="document.body.style.visibility = 'visible';" style="height: 100vh">
+<body x-init="document.body.style.visibility = 'visible';" style="height: 100vh;">
     <div class="d-flex flex-column h-100">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
@@ -44,7 +44,7 @@
                                 <li><a class="dropdown-item" href="#" x-on:click="setTheme('dark')"><i class="bi bi-moon-stars-fill"></i> Dark</a></li>
                             </ul>
                         </div>
-                        <div class="mt-1 h-100 mx-3">
+                        <div class="d-none d-sm-block mt-1 h-100 mx-3">
                             <div class="vr h-100"></div>
                         </div>
 
@@ -54,7 +54,7 @@
             </nav>
         </header>
         <div class="d-flex flex-column pt-2 h-100">
-            <main role="main" class="container">
+            <main role="main" class="container-sm">
                 @RenderBody()
             </main>
         </div>
