--- a/PomodoroUI/PomodoroUI/Pages/Shared/_LoginPartial.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 {
     @*If this is not the user's first log in, say "Welcome back" instead of hello.*@
     <li class="nav-item">
-        <a id="manage" class="nav-link fw-semibold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link fw-semibold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)</a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
