--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -15,7 +15,7 @@
 
 
 <div id="all-study-tasks" class="row gx-5">
-    <div class="col-12 col-lg-6">
+    <div class="col-12">
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
             <div class="d-flex h-100 align-items-end">
                 <h5 class="mb-0 me-4">Tasks</h5>
@@ -25,18 +25,20 @@
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal">Add Task</button>
             </div>
         </div>
-
         <div id="current-tasks">
             @await Html.PartialAsync("Partials/_UncompletedStudyTasks")
         </div>
 
     </div>
-    <div class="col-12 col-lg-6">
-        <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
-            <h5 class="mb-0 me-2">Completed Tasks</h5>
+    @if (Model.StudyTasks.Any(u => u.Completed && !u.Archived))
+    {
+        <div class="col-12">
+            <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
+                <h5 class="mb-0 me-2">Completed Tasks</h5>
+            </div>
+            <div id="completed-tasks">
+                @await Html.PartialAsync("Partials/_CompletedStudyTasks")
+            </div>
         </div>
-        <div id="completed-tasks">
-            @await Html.PartialAsync("Partials/_CompletedStudyTasks")
-        </div>
-    </div>
+    }
 </div>
