--- a/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.scss
+++ b/PomodoroUI/PomodoroUI/wwwroot/lib/bootstrap/scss/custom.scss
@@ -18,8 +18,7 @@ $container-max-widths: (
     sm: 540px,
     md: 720px, 
     lg: 960px, 
-    xl: 1000px, 
-    xxl: 1100px
+    xl: 1000px
 );
 
 
