--- a/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
@@ -15,7 +15,7 @@
                 <div class="mb-1 px-3">
                     <small>Add important tasks you want to complete during this session.</small>
                 </div>
-                <hr class="text-opacity-50" />
+                <hr class="text-opacity-50 mb-0" />
                 <div>
                     <div>
                         @await Html.PartialAsync("Partials/_StudyTaskCreate")
