--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -18,11 +18,15 @@
     <div class="col-12">
         <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
             <div class="d-flex h-100 align-items-end">
-                <h5 class="mb-0 me-4">Tasks</h5>
+                <div class="d-flex mb-0 me-4">
+                    <h5 class="me-3">Tasks</h5>
+                    <a class="my-0" asp-page="/Manage/Index">Manage</a>
+                </div>
                 <small class="btn btn-link m-0 p-0" style="display: none">Complete Checked</small>
             </div>
             <div>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal">Add Task</button>
+                <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#study-task-create-modal">Add Task</button>
+
             </div>
         </div>
         <div id="current-tasks">
