--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -41,6 +41,11 @@
             <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
         <div class="mb-2">
+            <label asp-for="StudyTaskCreate.Deadline" class="form-label">Deadline:</label>
+            <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Deadline" />
+            <span asp-validation-for="StudyTaskCreate.Deadline" class="text-danger form-text"></span>
+        </div>
+        <div class="mb-2">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                     <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
