--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -48,6 +48,11 @@
             <span asp-validation-for="StudyTaskUpdate.TaskPriorityId" class="text-danger form-text"></span>
         </div>
         <div class="mb-2">
+            <label asp-for="StudyTaskUpdate.Deadline" class="form-label">Deadline:</label>
+            <input class="form-control form-control-sm" asp-for="StudyTaskUpdate.Deadline" />
+            <span asp-validation-for="StudyTaskUpdate.Deadline" class="text-danger form-text"></span>
+        </div>
+        <div class="mb-2">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                     <label asp-for="StudyTaskUpdate.Name" class="form-label me-2 my-0">Labels:</label>
